# internet-veyon-plugin

./: CMakeLists.txt  README.md  deploy.sh
src/: InternetControl.json  InternetControlPlugin.cpp  InternetControlPlugin.h  resources.qrc
